19 Sep 2010 Process Panel started scripts in a seperate thread. - Paul Gorlinsky
19 Sep 2010 Message Security Assist Extension 4 - Bernard van der Helm
19 Sep 2010 Change SYMBOL processing to use either $() or ${} syntax and support
            default assignment if SYMBOL is not defined. - Paul Gorlinsky
17 Sep 2010 Reset Reference Bits Multiple Facility - Jan Jaeger
17 Sep 2010 Enhanced Monitor Facility - Jan Jaeger
16 Sep 2010 Message Security Assist Extension 3 - Bernard van der Helm
14 Sep 2010 1) Set Subsystem Mode support (treats SSM the same way the 2105 does,
               mostly validate and NOP). There is still one validation sequence to
               be added, but can be done later (marked TBD). Future support can be
               added for changes to subsystem caching by dynamically changing
               SYNCIO to NOSYNCIO; position marked in the update as TBD/Future.
            2) Move of sense length to CU type where it belongs, rather than by
               device type; new code in ckddasd.c turns on 24-bit compatibility
               sense for 3380 devices when attached to newer controllers.
            3) Update of CKD RDC features and documentation of feature bits.
               Device features corrected to reflect Hercules supported and
               unsupported CKD features.
14 Sep 2010 CMPSC Fix - Richard Pinion / Bernard van der Helm
13 Sep 2010 Issue herc commands via HTTP /cgi-bin/tasks/cmd?cmd=xxx - Robert Hodge
12 Sep 2010 Support REXX as scripting language for .cnf .rc and script files - Jan Jaeger
05 Sep 2010 Fast-BCR-Serialization Facility - Roger Bowler
31 Aug 2010 Comment out unimplemented hetmap support for "tapemap" alias
            that produces incorrect output under Linux due to libtool
            wrappers - Kevin Leonard
29 Aug 2010 Virtual Architecture Level support - Jan Jaeger
28 Aug 2010 Add "autoinit" command to control a sysblk variable noautoinit. 